--- a/index.html
+++ b/index.html
@@ -4,19 +4,45 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Auf Dich</title>
+		<link rel="shortcut icon" type="image/png" href="images/Favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	</head>
 	<body>
-		<header>
-					<h1>aufdich.de</h1>
-		</header>
 
-		<div class="game">
-			<script src="js/game.js"></script>
-		</div>
+		<section class="aufdich">
+			<h1>AUF</h1>
+			<h1>DICH</h1>
+		</section>
+
+		<div class="divider"></div>
+
+		<section class="berlin">
+			<div class="berlintext">
+				<p>DANKE</p>
+				<p>DAS DU</p>
+				<p>BERLIN</p>
+				<p>SOOOO</p>
+				<p>SCHÖN</p>
+				<p>MACHST</p>
+			</div>
+
+			<div class="iconliebe">
+				<div>
+					<img class="bottleheart" src="images/IconBottleHeart.png">
+				</div>
+				<div>
+					<p>Text</p>
+					<p>Text</p>
+				</div>
+			</div>
+
+		</section> 
 			
-		<h3>thank you for playing!</h1>
+						<div class="game">
+				<canvas id="canvas"></canvas>
+				<script src="js/game.js"></script>
+			</div>
 		
 		<footer>
 			
