--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="berlintext">
 				<p>DANKE</p>
 				<p>DAS DU</p>
-				<p>BERLIN</p>
+				<p style="font-weight: bolder; color: #e6aa82;">BERLIN</p>
 				<p>SOOOO</p>
 				<p>SCHÖN</p>
 				<p>MACHST</p>
@@ -30,19 +30,27 @@
 			<div class="iconliebe">
 				<div>
 					<img class="bottleheart" src="images/IconBottleHeart.png">
+					<canvas id="canvas"></canvas>
+					<script src="js/game.js"></script>
 				</div>
 				<div>
-					<p>Text</p>
-					<p>Text</p>
+					<p>Pfandflasche</p>
+					<p>100% Liebe</p>
 				</div>
 			</div>
+				</section> 	
 
-		</section> 
-			
-						<div class="game">
-				<canvas id="canvas"></canvas>
-				<script src="js/game.js"></script>
+		<section>
+			<div class="image" style="background-image: url(images/Görlitzer-Park.jpg); background-size: cover;">
 			</div>
+
+			<div class="responsivetext">
+				<p class="text">A whacked Fraoch Heather Ale has a change of heart about the blue moon. Any tornado brew can organize a Citra Ninja around a porter, but it takes a real hops to organize a discusting Wolverine Beer.<br> 
+				<br>Now and then, a skinny Amarillo Pale Ale conquers a dude. A porter over the pit viper buys an expensive drink for another blood clot.</p>
+			</div>
+		</section>
+
+		<div class="divider"></div>
 		
 		<footer>
 			
